--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./index",
   "dependencies": {
     "express": "^4.15.4",
-    "swagger-jsdoc": "^1.9.7"
+    "swagger-jsdoc": "^1.9.7",
+    "swagger-ui-express": "^2.0.6"
   },
   "devDependencies": {
     "jshint": "*",
